# autopsy-agent

./: .gitignore  Makefile  README.md  incident-autopsy-agent.md
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/agent/: __init__.py  events.py  orchestrator.py
backend/app/services/: evidence.py
backend/app/tools/: __init__.py  github.py  logs.py  metrics.py
backend/tests/: test_events.py  test_github.py  test_incident_distinction.py  test_incidents.py  test_metrics_logs.py
demo-stack/: docker-compose.yml
demo-stack/alertmanager/: config.yml
demo-stack/downstream/: Dockerfile  app.py
demo-stack/grafana/dashboards/: orders-observability.json
demo-stack/grafana/provisioning/dashboards/: dashboards.yml
demo-stack/grafana/provisioning/datasources/: datasources.yml
demo-stack/loadgen/: Dockerfile  loadgen.py
demo-stack/loki/: config.yml
demo-stack/orders/: Dockerfile  requirements.txt
demo-stack/orders/app/: main.py
demo-stack/prometheus/: prometheus.yml
demo-stack/prometheus/rules/: orders.yml
demo-stack/promtail/: config.yml
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
scripts/: resolve_incident.sh  trigger_incident.sh
